--- a/templates/iisma_admin.html
+++ b/templates/iisma_admin.html
@@ -25,7 +25,7 @@
                     <h6 class="fw-semibold mb-0">Status</h6>
                   </th>
                   <th class="border-bottom-0">
-                    <h6 class="fw-semibold mb-0">Budget</h6>
+                    <h6 class="fw-semibold mb-0">Detail</h6>
                   </th>
                 </tr>
               </thead>
@@ -60,64 +60,10 @@
                     </div>
                   </td>
                   <td class="border-bottom-0">
-                    <h6 class="fw-semibold mb-0 fs-4">Detail</h6>
+                    <a href="{{ url_for('iisma_view', user_id=student[0].nim) }}"><h6 class="fw-semibold mb-0 fs-4">Detail</h6></a>
                   </td>
                 </tr> 
                 {% endfor %}
-                <!-- <tr>
-                  <td class="border-bottom-0"><h6 class="fw-semibold mb-0">2</h6></td>
-                  <td class="border-bottom-0">
-                      <h6 class="fw-semibold mb-1">Andrew McDownland</h6>
-                      <span class="fw-normal">Project Manager</span>                          
-                  </td>
-                  <td class="border-bottom-0">
-                    <p class="mb-0 fw-normal">Real Homes WP Theme</p>
-                  </td>
-                  <td class="border-bottom-0">
-                    <div class="d-flex align-items-center gap-2">
-                      <span class="badge bg-secondary rounded-3 fw-semibold">Medium</span>
-                    </div>
-                  </td>
-                  <td class="border-bottom-0">
-                    <h6 class="fw-semibold mb-0 fs-4">$24.5k</h6>
-                  </td>
-                </tr> 
-                <tr>
-                  <td class="border-bottom-0"><h6 class="fw-semibold mb-0">3</h6></td>
-                  <td class="border-bottom-0">
-                      <h6 class="fw-semibold mb-1">Christopher Jamil</h6>
-                      <span class="fw-normal">Project Manager</span>                          
-                  </td>
-                  <td class="border-bottom-0">
-                    <p class="mb-0 fw-normal">MedicalPro WP Theme</p>
-                  </td>
-                  <td class="border-bottom-0">
-                    <div class="d-flex align-items-center gap-2">
-                      <span class="badge bg-danger rounded-3 fw-semibold">High</span>
-                    </div>
-                  </td>
-                  <td class="border-bottom-0">
-                    <h6 class="fw-semibold mb-0 fs-4">$12.8k</h6>
-                  </td>
-                </tr>      
-                <tr>
-                  <td class="border-bottom-0"><h6 class="fw-semibold mb-0">4</h6></td>
-                  <td class="border-bottom-0">
-                      <h6 class="fw-semibold mb-1">Nirav Joshi</h6>
-                      <span class="fw-normal">Frontend Engineer</span>                          
-                  </td>
-                  <td class="border-bottom-0">
-                    <p class="mb-0 fw-normal">Hosting Press HTML</p>
-                  </td>
-                  <td class="border-bottom-0">
-                    <div class="d-flex align-items-center gap-2">
-                      <span class="badge bg-success rounded-3 fw-semibold">Critical</span>
-                    </div>
-                  </td>
-                  <td class="border-bottom-0">
-                    <h6 class="fw-semibold mb-0 fs-4">$2.4k</h6>
-                  </td>
-                </tr>                        -->
               </tbody>
             </table>
           </div>
