--- a/templates/home_mahasiswa.html
+++ b/templates/home_mahasiswa.html
@@ -20,7 +20,7 @@
     <div class="col-sm-6 col-xl-3">
       <div class="card overflow-hidden rounded-2">
         <div class="position-relative">
-          <a href="javascript:void(0)"><img src="{{ url_for('static', filename='/images/student_exchange.jpeg') }}" class="card-img-top rounded-0" alt="..."></a>
+          <a href="{{ url_for('exchange')}}"><img src="{{ url_for('static', filename='/images/iisma-2023-2.jpg')}}" class="card-img-top rounded-0" alt="..."></a>
         </div>
         <div class="card-body pt-3 p-4">
           <h6 class="fw-semibold fs-4">Exchange</h6>
