create another pie chart and fix some end point

--- a/templates/base_dosen.html
+++ b/templates/base_dosen.html
@@ -49,7 +49,7 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="{{ url_for('iisma_admin') }}" aria-expanded="false">
+              <a class="sidebar-link" href="{{ url_for('exchange_admin') }}" aria-expanded="false">
                 <span>
                   <i class="ti ti-article"></i>
                 </span>
