--- a/templates/home_dosen.html
+++ b/templates/home_dosen.html
@@ -55,7 +55,7 @@
         <div class="card-body">
           <div class="d-sm-flex d-block align-items-center justify-content-between mb-9">
             <div class="mb-3 mb-sm-0">
-              <h5 class="card-title fw-semibold">Sales Overview</h5>
+              <h5 class="card-title fw-semibold">Yearly Trend of IISMA and Student Exchange Participation</h5>
             </div>
             <div>
               <select class="form-select">
@@ -77,7 +77,7 @@
           <div class="card-body">
             <div class="row alig n-items-start">
               <div class="col-8">
-                <h5 class="card-title mb-9 fw-semibold"> Monthly Earnings </h5>
+                <h5 class="card-title mb-9 fw-semibold"> Participant Status </h5>
                 <canvas id="pieChart_status"></canvas>
               </div>
             </div>
@@ -90,21 +90,8 @@
           <div class="card-body">
             <div class="row alig n-items-start">
               <div class="col-8">
-                <h5 class="card-title mb-9 fw-semibold"> Monthly Earnings </h5>
+                <h5 class="card-title mb-9 fw-semibold"> Most Preferred Country </h5>
                 <canvas id="pieChart_status2"></canvas>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <!-- Monthly Earnings -->
-        <div class="card">
-          <div class="card-body">
-            <div class="row alig n-items-start">
-              <div class="col-8">
-                <h5 class="card-title mb-9 fw-semibold"> Monthly Earnings </h5>
-                <canvas id="pieChart_status3"></canvas>
               </div>
             </div>
           </div>
