--- a/templates/iisma_admin.html
+++ b/templates/iisma_admin.html
@@ -34,8 +34,8 @@
                 <tr>
                   <td class="border-bottom-0"><h6 class="fw-semibold mb-0">{{ student[0].nim }}</h6></td>
                   <td class="border-bottom-0">
-                      <h6 class="fw-semibold mb-1">{{ student[0].location}}</h6>
-                      <span class="fw-normal">Web Designer</span>                          
+                    <h6 class="fw-semibold mb-1">{{ student[0].univ}}</h6>
+                    <span class="fw-normal">{{ student[0].location}}</span>  
                   </td>
                   <td class="border-bottom-0">
                     <p class="mb-0 fw-normal">{{ student[1].nama }}</p>
